--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,8 @@
 html {
  background-color:  hsl(257, 40%, 49%);
  color: white;
+ width: 1440px;
+ padding-right: 100px;
 }
 
 /* text  */
@@ -48,9 +50,11 @@ html {
 h1 {
   font-family: 'Poppins', sans-serif;
   font-weight: 600px;
+  text-align: right;
 }
 
 p {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400px;
+  text-align: right;
 }
