position text and huddle logo

--- a/src/App.css
+++ b/src/App.css
@@ -49,11 +49,20 @@ html {
 h1 {
   font-family: 'Poppins', sans-serif;
   font-weight: 600px;
-  text-align: right;
+  text-align: left;
+  position: absolute; top: 200px; right: 440px;
 }
 
 p {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400px;
-  text-align: right;
+  text-align: left;
+  position: absolute; top: 320px; right: 335px;
+}
+
+
+/* logo */
+
+img#logo {
+  position: absolute; top: 50px; left: 20px;
 }
