--- a/src/App.css
+++ b/src/App.css
@@ -79,22 +79,22 @@ img#mockup{
 
 
 img#facebook {
-  position: absolute; bottom: 190px; right: 300px;
+  position: absolute; bottom: -10px; right: 254px;
   width: 0.8em;
-  fill: white;
-  filter:   saturate(100) hue-rotate(241.5deg);
+  filter: invert(100%);
 }
 
 img#twitter {
-  position: absolute; bottom: 190px; right: 320px;
-  width: 0.8em;
-  fill: white;
-  filter:   saturate(100) hue-rotate(241.5deg);
+  position: absolute; bottom: -12px; right: 208px;
+  width: 1.2em;
+  filter: invert(100%);
+
 }
 
 img#instagram {
-  position: absolute; bottom: 190px; right: 280px;
-  width: 0.8em;
-  fill: white;
-  filter:   saturate(100) hue-rotate(241.5deg);
+  position: absolute; bottom: -12px; right: 160px;
+  width: 1.2em;
+  filter: invert(100%);
 }
+
+
